add images folder and files and create a container in HTML for basic layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="content">
-      <h1>Magic 8 ball on SSaurel's Channel</h1>
+<section id="hero" class="section hero section-overflow">
+    <header id="navbar spy" class="header header-banner header-1 header-transparent header-fixed">
+        <nav id="primary menu" class="navbar navbar-expand-ig navbar-dark">
+            <div class="container">
+                 <a href="homepage"></a>
+            </div>
+        </nav>
+    </header>
+</section>
+
+    <!-- <div id="content"> 
+      <h1>Magic 8 ball</h1>
       <p id="info">Ask me what you want to know and click on the Magic 8 Ball</p>
       <input type="text" id="question" />
       <div id="eight-ball" class="eight-ball">
@@ -19,7 +29,7 @@
           <p id="answer"></p>
         </div>
       </div>
-    </div> 
+    </div>  -->
     <script src="assets/js/script.js"></script>
    </body>
 </html>
