Add images and basic structure for memory game

--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-   
-    <title>Document</title>
-</head>
-<body>
-<section id="hero" class="section hero section-overflow">
-    <header id="navbar spy" class="header header-banner header-1 header-transparent header-fixed">
-        <nav id="primary menu" class="navbar navbar-expand-ig navbar-dark">
-            <div class="container">
-                 <a href="homepage"></a>
-            </div>
-        </nav>
-    </header>
-</section>
+<html>
 
-    <!-- <div id="content"> 
-      <h1>Magic 8 ball</h1>
-      <p id="info">Ask me what you want to know and click on the Magic 8 Ball</p>
-      <input type="text" id="question" />
-      <div id="eight-ball" class="eight-ball">
-        <div class="answer">
-          <p id="eight">8</p>
-          <p id="answer"></p>
-        </div>
+  <head>
+    <title>Ask the Magic 8-ball</title>
+    <meta charset="UTF-8">
+    <meta name="language" content="en">
+    <meta name="keywords" content="Magic, 8-ball, fortune reader, fortune teller,">
+    <meta name="description" content="Ask the Magic 8-ball a question, directly in your browser! Based off the fortune telling toy by mattell.">
+    <meta name="author" content="Moira Hartigan">
+    <link rel="stylesheet" href="stylesheet.css">
+   
+  </head>
+
+  <body>
+    <h1>ASK THE MAGIC 8-BALL A QUESTION</h1>
+  
+    <div id="magic8Ball">
+      <div id="answerSide" class="inner"><img id="answer" src="" alt="MY SOURCES ARE BROKEN" /></div>
+      <div id="eightSide" class="inner">8</div>
+    </div>
+    
+    <div id="logBox">
+      <div id="magic-message">
+        <input id="question" type="text" placeholder="Type your question here..." /><input id="ask" type="button" value="Ask" />
       </div>
-    </div>  -->
+    </div>
+    <div id="links"><a href="#" id="username"><a href="#" id="help">How to play</a> <div style="float:right"><a href="deployed site" target="_blank">Created by Moira Hartigan</a></div></div>
+   
+    <!-- New game Memory game -->
+
+    <h3>Score: <span id="result"></span></h3>
+
+    <div class="grid">
+
+    </div>
+
     <script src="assets/js/script.js"></script>
-   </body>
+  </body>
+  
 </html>
