Add images to grid and add onclick function

--- a/index.html
+++ b/index.html
@@ -10,28 +10,60 @@
 <body>
      <!-- New game Memory game -->
 <div class="row">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card monster-6 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-7 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-7 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-8 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
 </div>
 <div class="row">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card monster-1 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-3 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-2 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-5 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
 </div>
 <div class="row">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card monster-8 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-2 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-4 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-4 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
 </div>
 <div class="row">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card monster-6 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-1 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-5 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
+    <div class="card monster-3 image-hidden" 
+    onclick="onCardClicked(event)">
+</div>
 </div>
 
     <script src="assets/js/script.js"></script>
