--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       
         <div class="memory-card">
-            <img class="card-front" src="assets/images/monster-3.jpg" alt="monster-3">
+            <img class="card-front image-hidden" src="assets/images/monster-3.jpg" alt="monster-3">
           <img class="card-back" src="assets/images/blank2.jpg" alt="Blank Card">
         </div>
       
@@ -90,6 +90,20 @@
             <img class="card-back" src="assets/images/blank2.jpg" alt="Blank Card">
         </div>
       </section>
+
+      <!-- Modal -->
+  <section class="win-game-modal">
+    <div id="modal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>WELL DONE!</h2>
+        <p>You have won the game and found all 8 pairs of cards.</p>
+        <!-- <img class="modal-img" src="" alt="add an image of an alien here saying well done"> -->
+        <button class="btn play-again-btn">Play Again?</button>
+      </div>
+    </div>
+  </section>
 
     <script src="assets/js/script.js"></script>
 </body>
