--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Memory Game</title>
 </head>
 <body>
+
+  <h1 class="page-title">Alien Memory</h1>
      <!-- Memory game grid -->
      <section class="memory-game">
         <div class="memory-card">
