--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
      <div class="game-container">
       <div class="game-info-container">
         <div class="game-info">
-          Time <span id="time-remaining">100</span>
+          Time <span class="timer">0.00</span>
         </div>
         <div class="game-info">
-          Moves <span id="moves">0</span>
+          Moves <span class="moves">0</span>
         </div>
   
       </div class="deck" id="card-deck">
@@ -104,12 +104,12 @@
 
       <!-- New Game again -->
 <div> 
-  <button class="hero-btn" onclick="reset()">New Game</button>
+  <button id="new-game" class="hero-btn" onclick="reset()">New Game</button>
 </div>
     </div>
 
       <!-- Modal -->
-  <section class="win-game-modal">
+  <section class="win-game-modal" id="win-msg">
     <div id="modal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
