--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
       <!-- Modal -->
-  <section class="win-game-modal" id="win-msg">
+  <section class="win-game" id="win-msg">
     <div id="modal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
@@ -119,7 +119,7 @@
         <p>You have won the game and found all 8 pairs of cards.</p>
         <br>
         <img class="modal-img" src="/assets/images/thumbs-up.png" alt="Thumbs up smiley face">
-        <button class="btn hero-btn">Play Again?</button>
+        <button class="btn hero-btn restart">Play Again?</button>
       </div>
     </div>
   </section>
