--- a/index.html
+++ b/index.html
@@ -113,27 +113,26 @@
     
   </div>
 
-  <!-- New Game again -->
-  <div>
-    <button class="hero-btn" onclick="reset()">New Game</button>
-  </div>
-  </div>
-
-   <!-- Modal -->
-   <section id="win-msg">
-    <div class="modal" id="modal">
-    <!-- modal content -->
-      <div class="modal-content">
-        <span id="close" class="close">&times;</span>
+    <!-- New Game again -->
+    <div>
+      <button class="hero-btn" onclick="reset()">New Game</button>
+    </div>
+  
+  
+    <!-- Modal -->
+    <section class="win-msg">
+      <div class="modal" id="modal">
+        <!-- modal content -->
+        <div class="modal-content">
+          <span id="close" class="close">&times;</span>
           <h2>Well Done!</h2>
           <br>
           <p>You have won the game and found all 8 pairs of cards.</p>
           <br>
-          <img class="modal-img" src="/assets/images/thumbs-up.png" alt="Thumbs up smiley face">
-          <button class="btn hero-btn play-again-button" onclick="windowClose()">Play Again?</button>
+          <img class="modal-img" src="./assets/images/thumbs-up.png" alt="Thumbs up smiley face">
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
  
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
